5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1638_2728.log
== TEST (2019-04-11 10:54:28) 
-- CODE:
p = float(input("percurso:"))
car = (input("tipo (A/B)"))

car A = 8
car B = 12

if(car.upper == ("A")):
	c = p/car A
	print(c)
else:
	c = p/car B
	print(c)
-- ERROR:
File "XXXX", line 4
    car A = 8
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:54:48) 
-- CODE:
p = float(input("percurso:"))
car = (input("tipo (A/B)"))

car a = 8
car b = 12

if(car.upper == ("A")):
	c = p/car a
	print(c)
else:
	c = p/car b
	print(c)
-- ERROR:
File "XXXX", line 4
    car a = 8
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:54:57) 
-- CODE:
p = float(input("percurso:"))
car = (input("tipo (A/B)"))

cara = 8
carb = 12

if(car.upper == ("A")):
	c = p/car a
	print(c)
else:
	c = p/car b
	print(c)
-- ERROR:
File "XXXX", line 8
    c = p/car a
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:54:58) 
-- CODE:
p = float(input("percurso:"))
car = (input("tipo (A/B)"))

cara = 8
carb = 12

if(car.upper == ("A")):
	c = p/car a
	print(c)
else:
	c = p/car b
	print(c)
-- EXECUTION TIME:
0.228943
-- ERROR:
  File "/home/codebench/codes/1638/2728/main.py", line 8
    c = p/car a
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:54:59) 
-- CODE:
p = float(input("percurso:"))
car = (input("tipo (A/B)"))

cara = 8
carb = 12

if(car.upper == ("A")):
	c = p/car a
	print(c)
else:
	c = p/car b
	print(c)
-- ERROR:
File "XXXX", line 8
    c = p/car a
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:55:05) 
-- CODE:
p = float(input("percurso:"))
car = (input("tipo (A/B)"))

cara = 8
carb = 12

if(car.upper == ("A")):
	c = p/cara
	print(c)
else:
	c = p/carb
	print(c)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:55:19) 
-- CODE:
p = float(input("percurso:"))
car = (input("tipo (A/B)"))

cara = 8
carb = 12

if(car.upper() == ("A")):
	c = p/cara
	print(c)
else:
	c = p/carb
	print(c)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:55:33) 
-- CODE:
p = float(input("percurso:"))
car = (input("tipo (A/B)"))

cara = 8
carb = 12

if(car.upper() == ("A")):
	c = p/cara
	print(c)
else:
	c = p/carb
	print(c)
-- EXECUTION TIME:
0.199461
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666667
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.125
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:55:49) 
-- CODE:
p = float(input("percurso:"))
car = (input("tipo (A/B)"))

cara = 8
carb = 12

if(car.upper() == ("A")):
	c = p/cara
	print(c)
else:
	c = p/carb
	print(c)
-- EXECUTION TIME:
0.202161
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666667
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
5.416666666666667
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
5.416666666666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:55:49) 
-- CODE:
p = float(input("percurso:"))
car = (input("tipo (A/B)"))

cara = 8
carb = 12

if(car.upper() == ("A")):
	c = p/cara
	print(c)
else:
	c = p/carb
	print(c)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:55:49) 
-- CODE:
p = float(input("percurso:"))
car = (input("tipo (A/B)"))

cara = 8
carb = 12

if(car.upper() == ("A")):
	c = p/cara
	print(c)
else:
	c = p/carb
	print(c)
-- EXECUTION TIME:
0.180073
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666667
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
5.416666666666667
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
percurso:tipo (A/B)8.125
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:55:49) 
-- CODE:
p = float(input("percurso:"))
car = (input("tipo (A/B)"))

cara = 8
carb = 12

if(car.upper() == ("A")):
	c = p/cara
	print(c)
else:
	c = p/carb
	print(c)
-- EXECUTION TIME:
0.205893
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/2728/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:56:07) 
-- CODE:
p = float(input("percurso:"))
car = (input("tipo (A/B)"))

cara = 8
carb = 12

if(car.upper() == ("A")):
	c = p/cara
	print(c)
else:
	c = p/carb
	print(c)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:57:45) 
-- CODE:
p = float(input("percurso:"))
car = (input("tipo (A/B)"))

cara = 8
carb = 12

if(car.upper() == ("A")):
	c = p/cara
	print(round(c, 2))
else:
	c = p/carb
	print(round(c, 2))
-- OUTPUT:
5.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:57:52) 
-- CODE:
p = float(input("percurso:"))
car = (input("tipo (A/B)"))

cara = 8
carb = 12

if(car.upper() == ("A")):
	c = p/cara
	print(round(c, 2))
else:
	c = p/carb
	print(round(c, 2))
-- EXECUTION TIME:
0.203488
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
